# aegean-consensus

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: README.md
docker/: README.md
docs/: README.md
examples/: README.md
scripts/: README.md
src/aegean/: README.md  __init__.py
src/aegean/api/: README.md  __init__.py
src/aegean/core/: README.md  __init__.py  agent.py  models.py
src/aegean/integrations/: README.md  __init__.py
tests/: README.md
