[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegean-consensus"
version = "0.1.0"
description = "A Byzantine Fault-Tolerant Consensus Protocol for Multi-Agent LLM Systems"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Aegean Contributors", email = "aegean-dev@example.com"}
]
keywords = ["llm", "multi-agent", "consensus", "autogen", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyautogen>=0.2.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiohttp>=3.9.0",
    "structlog>=23.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]
grpc = [
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",
]
monitoring = [
    "prometheus-client>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/your-org/aegean-consensus"
Documentation = "https://github.com/your-org/aegean-consensus/blob/main/README.md"
Repository = "https://github.com/your-org/aegean-consensus"
Issues = "https://github.com/your-org/aegean-consensus/issues"

[tool.setuptools]
packages = ["aegean"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

